--- a/src/html/incoming_message_list.html
+++ b/src/html/incoming_message_list.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/personium.css">
-    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/homeapp.css">
-    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/common.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/personium.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/homeapp.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/common.css">
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -33,11 +33,11 @@
         };
     </script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/personium.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/common.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/msg_info.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/utils.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/personium.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/common.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/inc_msg_list.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/load.i18n.js"></script>
 
     <title>Personium</title>
 </head>
@@ -45,44 +45,23 @@
 <body>
 
     <header>
-        <a class="header-btn pn-back-btn pn-btn" href="incoming_message_list.html">
+        <a class="header-btn pn-back-btn pn-btn" href="message.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span></span>
+        <span data-i18n="message:ReceiveMessage"></span>
     </header>
 
-    <main class="incoming_msg">
-        <div class="pn-list sender">
-            <div class="pn-list-icon">
-                <img id="msgIcon">
-            </div>
-            <div class="account-info">
-                <div id="msgUserName" class="user-name font-weight-bold"></div>
-                <div>
-                    <span data-i18n="message:ReceivedDate"></span> 
-                    <span id="msgDate"></span>
-                </div>
-            </div>
-        </div>
-        <div class="message-title">
-            
-        </div>
-        <div class="message-text">
-            
-        </div>
+    <main>
+        <!--user account infomation-->
+        <div class="bg-gray">
+            <div>
+                <ul id="messageList" class="hover-action">
 
-    </main>
-    <footer class="account-info-footer">
-        <div class="edit-list replay-btn-area">
-            <button type="button" class="footer-btn" onclick="msg_info.transitionReplyMessage();">
-                <i class="fas fa-reply fa-2x"></i>
-                <div data-i18n="message:Reply"></div>
-            </button>
-            <button type="button" class="footer-btn" onclick="msg_info.transitionTransferMessage();">
-                <i class="fas fa-arrow-right fa-2x"></i>
-                <div data-i18n="message:Transfer"></div>
-            </button>
+                </ul>
+            </div>
         </div>
+    </main>
+    <footer>
     </footer>
 </body>
 
