--- a/src/html/change_password.html
+++ b/src/html/change_password.html
@@ -1,19 +1,16 @@
 ﻿<!doctype html>
 <html lang="ja">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
+          crossorigin="anonymous">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/personium.css">
-    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/homeapp.css">
-    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/common.css">
-
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/personium.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/homeapp.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/common.css">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -23,33 +20,42 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script>
     <script>
         FontAwesomeConfig = {
             searchPseudoElements: true
         };
     </script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/personium.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/common.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/new_account.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
-
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/utils.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/personium.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/common.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/change_password.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/load.i18n.js"></script>
     <title>Personium</title>
 </head>
-
 <body>
+    <div class="modal fade single-btn-modal" tabindex="-1" role="dialog" data-backdrop="static" aria-hidden="true">
+        <div class="modal-dialog pn-modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body pn-modal-body" data-i18n="successChangePass">
+
+                </div>
+                <div class="modal-footer pn-modal-footer">
+                    <button type="button" class="btn ok-btn" data-dismiss="modal">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <header>
-        <a class="header-btn pn-back-btn pn-btn" href="select_accounttype.html">
+        <a class="header-btn pn-back-btn pn-btn" href="main.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span data-i18n="CreateAccount"></span>
+        <span data-i18n="ChangePass"></span>
     </header>
-
     <main>
         <div class="bg-gray">
             <div id="links">
@@ -57,36 +63,23 @@
                     <li>
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <span class="input-group-text form-title form-no-border" data-i18n="Name"></span>
-                            </div>
-                            <input id="addAccountName" type="text" class="form-control account-form form-no-border" placeholder="アカウント名を入力" aria-describedby="basic-addon3">
-                        </div>
-                        <span class="popupAlertArea" style="color:red">
-                            <aside id="popupAddAccountNameErrorMsg"> </aside>
-                        </span>
-                    </li>
-
-                    <li>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
                                 <span class="input-group-text form-title form-no-border" data-i18n="Password"></span>
                             </div>
-                            <input id="addNewPassword" type="password" class="form-control account-form form-no-border" data-i18n="[placeholder]newPassPlaceHolder" aria-describedby="basic-addon3">
+                            <input id="editNewPassword" type="password" class="form-control account-form form-no-border" data-i18n="[placeholder]newPassPlaceHolder" aria-describedby="basic-addon3">
                         </div>
                         <span class="popupAlertArea" style="color:red">
-                            <aside id="addChangeMessage"> </aside>
+                            <aside id="editChangeMessage"> </aside>
                         </span>
                     </li>
-
                     <li>
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text form-title form-no-border" data-i18n="Confirmation"></span>
                             </div>
-                            <input id="addConfirmPassword" type="password" class="form-control account-form form-no-border" data-i18n="[placeholder]confirmNewPass" aria-describedby="basic-addon3">
+                            <input id="editConfirmPassword" type="password" class="form-control account-form form-no-border" data-i18n="[placeholder]confirmNewPass" aria-describedby="basic-addon3">
                         </div>
                         <span class="popupAlertArea" style="color:red">
-                            <aside id="addConfirmMessage"> </aside>
+                            <aside id="editConfirmMessage"> </aside>
                         </span>
                     </li>
                 </ul>
@@ -95,10 +88,9 @@
     </main>
     <footer class="account-info-footer">
         <div class="edit-list footer-btn-area">
-            <button type="button" class="btn btn-secondary footer-btn" onclick="location.href='account.html'" data-i18n="Cancel"></button>
-            <button type="button" class="btn btn-primary footer-btn font-weight-bold" onclick="new_account.addAccount();" data-i18n="Register"></button>
+            <button type="button" class="btn btn-secondary footer-btn" onclick="location.href='main.html'" data-i18n="Cancel"></button>
+            <button type="button" class="btn btn-primary footer-btn font-weight-bold" onclick="chg_pass.changePassword();" data-i18n="Update"></button>
         </div>
     </footer>
 </body>
-
 </html>
