--- a/src/html/message_info.html
+++ b/src/html/message_info.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html>
+<html lang="ja">
 
 <head>
     <!-- Required meta tags -->
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/personium.css">
-    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/homeapp.css">
-    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/common.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/personium.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/homeapp.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/common.css">
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -33,51 +33,56 @@
         };
     </script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/personium.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/common.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/settings.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/change_language.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/utils.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/personium.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/common.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/msg_info.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/load.i18n.js"></script>
+
     <title>Personium</title>
 </head>
 
 <body>
 
     <header>
-        <a class="header-btn pn-back-btn pn-btn" href="main.html">
+        <a class="header-btn pn-back-btn pn-btn" href="incoming_message_list.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <img class=title-icon-middle" src="" alt="">
-        <span data-i18n="ChangeLng"></span>
+        <span></span>
     </header>
 
-    <main>
-        <div class="bg-gray">
-            <div id="language-list">
-                <div class="title">
-                    <span data-i18n="changeLanguageDescription"></span>
+    <main class="incoming_msg">
+        <div class="pn-list sender">
+            <div class="pn-list-icon">
+                <img id="msgIcon">
+            </div>
+            <div class="account-info">
+                <div id="msgUserName" class="user-name font-weight-bold"></div>
+                <div>
+                    <span data-i18n="message:ReceivedDate"></span> 
+                    <span id="msgDate"></span>
                 </div>
-                <ul class="hover-action">
-                    <li class="en pn-check-list check-position-l" style="pointer-events: auto;">
-                        <a href="#" onclick="i18next.changeLanguage('en'); location.href='main.html'">
-                            <div class="pn-list">
-                                <div class="account-info text-hidden"><span class="user-name" data-i18n="English">English</span></div>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="ja pn-check-list check-position-l" style="pointer-events: auto;">
-                        <a href="#" onclick="i18next.changeLanguage('ja'); location.href='main.html'">
-                            <div class="pn-list">
-                                <div class="account-info text-hidden"><span class="user-name" data-i18n="Japanese">Japanese</span></div>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
             </div>
         </div>
+        <div class="message-title">
+            
+        </div>
+        <div class="message-text">
+            
+        </div>
+
     </main>
-    <footer>
+    <footer class="account-info-footer">
+        <div class="edit-list replay-btn-area">
+            <button type="button" class="footer-btn" onclick="msg_info.transitionReplyMessage();">
+                <i class="fas fa-reply fa-2x"></i>
+                <div data-i18n="message:Reply"></div>
+            </button>
+            <button type="button" class="footer-btn" onclick="msg_info.transitionTransferMessage();">
+                <i class="fas fa-arrow-right fa-2x"></i>
+                <div data-i18n="message:Transfer"></div>
+            </button>
+        </div>
     </footer>
 </body>
 
